objects/STT_Acct_Owner__c.object
<CustomObject>
    <fields>
        <fullName>Account__c</fullName>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Account Assignments in STT</relationshipLabel>
        <relationshipName>R00N30000000skE7EAI</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <reparentableMasterDetail>true</reparentableMasterDetail>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Agent_User_ID__c</fullName>
        <label>Agent User ID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>STT_Last_Updated_Date__c</fullName>
        <label>STT Last Updated Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Split__c</fullName>
        <label>Split %</label>
        <precision>5</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <label>Account Assignment in STT</label>
    <nameField>
        <label>Agent Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Account Assignments in STT</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>